# code-test

./: README.md  compile_commands.json  syncphone.py
cuda-example/: CMakeLists.txt  vectorAdd.cu
fastai/: build.sh  course1.py  requirement.txt
learnElectron/: main.js  package.json
libs/glad/include/glad/: egl.h  gl.h
libs/glad/src/: egl.c  gl.c
linuxDrm/: Makefile  drmGetFB.cpp  eglCapture.cpp  printModes.c  testDrm.cpp
linuxFrameBuffer/: CMakeLists.txt  testFrameBuffer.cpp
testAdrScreenCapture/: settings.gradle
testAdrScreenCapture/app/: build.gradle
testAdrScreenCapture/app/src/main/: AndroidManifest.xml
testAdrScreenCapture/app/src/main/res/layout/: fragment_dashboard.xml  fragment_home.xml
testAdrScreenCapture/app/src/main/res/navigation/: mobile_navigation.xml
testAdrScreenCapture/app/src/main/res/values/: strings.xml  themes.xml
testAdrScreenCapture/app/src/main/res/values-night/: themes.xml
testAdrScreenCapture/gradle/wrapper/: gradle-wrapper.properties
testNdkDebug/: CMakeLists.txt  build_adr.sh
testNdkDebug/ScreenCapApp/: settings.gradle
testNdkDebug/ScreenCapApp/app/: build.gradle
testNdkDebug/ScreenCapApp/app/src/main/: AndroidManifest.xml
testNdkDebug/ScreenCapApp/app/src/main/java/utils/: StringHelper.java
testNdkDebug/ScreenCapApp/app/src/main/res/menu/: menu_main.xml
testNdkDebug/ScreenCapApp/gradle/wrapper/: gradle-wrapper.properties
testNdkDebug/utils/: CMakeLists.txt  StringHelper.cpp  StringHelper.h
testNdkDebug/utils-jni/: CMakeLists.txt  StringHelperJNI.cc  StringHelperJNI.h
testOpengl/: testSDL.cpp
(+34 files in other folders)
